...
    <string name="age">Age</string>
    <string name="weight_label">Weight</string>


    <string name="glucose_type">Glucose type</string>
    <string name="bg_other">Other</string>
    <string name="bg_meter">Meter</string>
    <string name="bg_sensor">Sensor</string>

    <!-- WizardDialog -->

    <!-- SiteRotationDialog -->
    <string name="edit_site">Edit</string>
    <string name="record_site_location">Site Location: %1$s</string>
...
